Wed Jan 23 01:32:22 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/state.c (c_code16, c_code32, c_thumb, c_thumbx): Add alignment
	support.
	* unittests/compare/core/directive_code_thumb.s: Add.

Wed Jan 23 00:11:25 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/decode.c (Decode_FinalCheck): Better reporting.

Wed Jan 23 00:08:23 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* lex.c (nextbinop, nextbinopvalid): Remove.
	(Lex_GetIDNoError): Follow the nextbinop, nextbinopvalid removal.
	(Lex_GetDefiningLabel, Lex_GetPrim, Lex_GetBinop): Likewise.
	(Lex_NextPri): Remove.
	(Lex_Print): Clearer LexOperator and LexBool output.
	* lex.h (Lex_NextPri): Remove.
	* expr.c (expr): Split into Expr_Get and Expr_GetInt.
	(Expr_GetInt): Follow Lex_NextPri removal.
	(prim): Rename to...
	(Expr_GetPrim): ...this.  Better closing bracket mismatch error message.

	* unittests/compare/core/operator_precedence.s: Enhance.

Sat Jan 19 17:50:15 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* expr.c (expr): Add bool return value.
	(prim): Likewise.
	(Expr_Build): Likewise.
	(Expr_BuildAndEval): Add check on failed expression building.
	* expr.h (Expr_Build): Add bool return value.
	* lex.c (Lex_GetPrim): Use unsigned type for base value.  Unget wrong
	base character.
	* lex.h: Update comments.
	* m_cpuctrl.c (branch_shared): Add check on Expr_Build return value.
	* value.c (Value_Print): Fix DEBUG build. 

Sat Jan 19 17:43:57 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* symbol.c (Symbol_PrintAll): Fix DEBUG build.
	* code.c (Code_EvalLow): Likewise.
	* asm.c (ASM_DoPass): Likewise.

Sat Jan 19 17:40:00 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpu.c (m_nop): Code reformat.

Sun Jan 13 18:23:06 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* area.c, area.h, asm.c, code.c, code.h, decode.c, decode.h, depend.c,
	depend.h, directive_data.c, directive_file.c, directive_misc.c,